--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "embla-carousel-react": "^8.6.0",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
